--- a/Instructions/dotnet/Mod04/20532B_LAB_AK_04.md
+++ b/Instructions/dotnet/Mod04/20532B_LAB_AK_04.md
@@ -28,47 +28,45 @@
 
 4.  In the **New** blade that displays, click **Data + Storage**, and then **SQL Database** from **Data + Storage** blade.
 
-5.  In the **SQL database** blade that displays, perform the following steps:
+5.  In the **SQL database** blade that displays, locate the **Name** box and provide the value **db20532**.
 
-    a. In the **Name** box, type **db20532\[*Your Name Here*\]**.
+6. Click **Pricing Tier**.
 
-    b. Click **Pricing Tier**.
+7. In the **Recommended pricing tier** blade that displays, click the **View all** link and then select the **Basic** option.
 
-    c. In the **Recommended pricing tier** blade that displays, select **Basic**.
+8. Click **Select** to close the blade.
 
-    d. Click **Select** to close the blade.
+6.  Click **Select Source**. Perform the following actions
 
-6.  Click **Select Source**.
+  a.  Select the **Blank Database** option.
 
-7.  Select the **Blank Database** option.
+  a.  In the **SQL database** blade, click **Server**.
 
-8.  In the **SQL database** blade, click **Server**.
+  a.  In the **Server** blade that displays, click **Create a new server**.
 
-9.  In the **Server** blade that displays, click **Create a new server**.
+  a. In the **New Server** blade that displays, locate the **Server Name** box.
 
-10. In the **New Server** blade that displays, locate the **Server Name** box.
+  a. In the **Server Name** box, type **sv20532[*Your Name Here*]**.
 
-11. In the **Server Name** box, type **sv20532\[*Your Name Here*\]**.
+  a. In the **Server Admin Login** box, type **testuser**.
 
-12. In the **Server Admin Login** box, type **testuser**.
+  a. In the **Password** box, type **TestPa$$w0rd**.
 
-13. In the **Password** box, type **TestPa\\$\\$w0rd**.
+  a. In the **Confirm Password** box, type **TestPa$$w0rd**.
 
-14. In the **Confirm Password** box, type **TestPa\\$\\$w0rd**.
+  a. In the **Location** list, select the region that is closest to your location.
 
-15. Click **Location**.
+  a. In the **New server** blade, click **OK**.
 
-16. In the **Location** blade that displays, select the region that is closest to your location.
+18. In the **SQL database** blade, locate the **Resource group** section and select the existing *20532* resource group.
 
-17. In the **New server** blade, click **OK**.
+19. Click **Create** to create the SQL database and server.
 
-18. In the **SQL database** blade, click **Create** to create the SQL database and server.
-
-19. Write down the name of the new SQL database.
+19. Write down the server and database names for the new SQL Database instance.
 
 > **Results**: After completing this exercise, you will have created both servers and databases in the SQL Database service.
 
-## Exercise 2: Using Entity Framework with Azure SQL Databases
+## Exercise 2: Using Entity Framework with Local SQL Server
 
 #### Task 1: Run the ASP.NET web application to view events from the local SQL database
 
@@ -82,7 +80,7 @@
 
     > **Note:** The Data Generation script takes between one to two minutes to run.
 
-5.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Cloud** project, and then click **Set as Startup Project**.
+5.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Web** project, and then click **Set as Startup Project**.
 
 6.  On the **Debug** menu, click **Start Debugging**.
 
@@ -90,9 +88,11 @@
 
 8.  Close the tab that is displaying the website.
 
+## Exercise 3: Using Entity Framework with Azure SQL Databases
+
 #### Task 2: Configure DbContext with a new DatabaseInitializer
 
-1.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Data** project, point to **Add,** and then click **NewItem**.
+1.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Data** project, point to **Add** and then click **New Item**.
 
 2.  In the **Add New Item** dialog box, perform the following steps:
 
@@ -125,13 +125,14 @@
 6.  Verify that the updated class definition looks like the following line of code:
 
     ```
-    public class EventsContextInitializer : DbMigrationsConfiguration<EventsContext>
+    public class EventsContextInitializer : CreateDatabaseIfNotExists<EventsContext>
     ```
 
 7.  Add these **using** statements at the top of the code file:
 
     ```
-    using System.Data.Entity; using System.Data.Entity.Migrations;
+    using System.Data.Entity; 
+    using System.Data.Entity.Migrations;
     ```
 
 8.  In the Solution Explorer pane, expand the **Contoso.Events.Data** project.
@@ -141,10 +142,10 @@
 10. Within the static constructor **static EventsContext()**, add the following line of code:
 
     ```
-    Database.SetInitializer<EventsContext>(new MigrateDatabaseToLatestVersion<EventsContext, EventsContextInitializer>());
+    Database.SetInitializer<EventsContext>(new EventsContextInitializer());
     ```
 
-11. Save the EventsContext.cs file.
+11. Save the *EventsContext.cs* file.
 
 #### Task 3: Implement seed data with DbContext
 
@@ -161,25 +162,36 @@
 4.  Add the following **using** statements at the top of the code file:
 
     ```
-    using Contoso.Events.Models; using System.Data.Entity.Migrations;
-    ```
-
-5.  Add the public constructor method for EventsContextInitializer by typing the following lines of code.
-
-    ```
-    public EventsContextInitializer(){ AutomaticMigrationsEnabled = true;}
+    using Contoso.Events.Models; 
     ```
 
 6.  Place the cursor before the closing parenthesis of the **Seed(EventsContext context)** method, and then type the following lines of code:
 
     ```
-    if (context.Events.Count() == 0){ Event eventItem = new Event(); eventItem.EventKey = "FY17SepGeneralConference"; eventItem.StartTime = DateTime.Today; eventItem.EndTime = DateTime.Today.AddDays(3d); eventItem.Title = "FY17 September Technical Conference"; eventItem.Description = "Sed in euismod mi."; eventItem.RegistrationCount = 1; context.Events.Add(eventItem);}
+    if (context.Events.Count() == 0)
+    {
+        Event eventItem = new Event();
+        eventItem.EventKey = "FY17SepGeneralConference";
+        eventItem.StartTime = DateTime.Today;
+        eventItem.EndTime = DateTime.Today.AddDays(3d);
+        eventItem.Title = "FY17 September Technical Conference";
+        eventItem.Description = "Sed in euismod mi.";
+        eventItem.RegistrationCount = 1;
+        context.Events.Add(eventItem);
+    }
     ```
 
 7.  Place the cursor before the closing parenthesis of the **Seed(EventsContext context)** method, and then type the following lines of code:
 
     ```
-    if (context.Registrations.Count() == 0){ Registration registrationItem = new Registration(); registrationItem.EventKey = "FY17SepGeneralConference"; registrationItem.FirstName = "Aisha"; registrationItem.LastName = "Witt"; context.Registrations.Add(registrationItem);}
+    if (context.Registrations.Count() == 0)
+    {
+        Registration registrationItem = new Registration();
+        registrationItem.EventKey = "FY17SepGeneralConference";
+        registrationItem.FirstName = "Aisha";
+        registrationItem.LastName = "Witt";
+        context.Registrations.Add(registrationItem);
+    }
     ```
 
 8.  Place the cursor before the closing parenthesis of the **Seed(EventsContext context)** method, and then type the following line of code:
@@ -188,11 +200,11 @@
     context.SaveChanges();
     ```
 
-9.  Save the EventsContextInitializer.cs file.
+9.  Save the *EventsContextInitializer.cs* file.
 
 10. In the Solution Explorer pane, right-click the **Contoso.Events.Data** project, and then click **Build**.
 
-#### Task 4: Publish the cloud application with updated DbContext to Azure
+#### Task 4: Publish the web application with updated DbContext to Azure
 
 1.  In the **Solution Explorer** pane, expand the **Contoso.Events.Web** project.
 
@@ -200,45 +212,55 @@
 
 3.  Double-click the **Web.Release.config** file.
 
-4.  In the **Web.Release.config** file, update the connection string with the key **EventsContextConnectionString** with the following values:
+4.  In the **Web.Release.config** file, update the connection string using the key **EventsContextConnectionString** with the following values:
 
-    -   \[database\]: **db20532\[*Your Name Here*\]**
+    -   \[database\]: **db20532**
 
     -   \[login\]: **testuser**
 
     -   \[server\]: **sv20532\[*Your Name Here*\]**. Note there are two different places to replace \[server\].
 
-    -   \[password\]: **TestPa\\$\\$w0rd**
+    -   \[password\]: **TestPa$$w0rd**
+
+    > **Note:** Ensure that you remove the square brackets as you replace each placeholder.
 
 5.  Save the **Web.Release.config** file.
 
-6.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Cloud** project, and then click **Publish**.
+6.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Web** project, and then click **Publish**.
 
-7.  In the **Publish Azure Application** dialog box, perform the following steps:
+7. In the Publish Web window, click **Microsoft Azure App Service**.
 
-    a. If you have not selected a subscription before, perform the following steps:
+7.  In the **App Service** dialog, perform the following steps:
 
-    b. If prompted, sign in with your Microsoft account.
+    a. Select your Azure subscription.
 
-    c. Locate the **Choose your subscription** list, and then select your Azure subscription.
+    b. Ensure that the **Resource Group** option is selected in the **View** list.
 
-    d. Click **Next**.
+    c. Click the **New** button.
 
-    e. If you selected a subscription in the past, you will be directed to the **Windows Azure Publish Settings** step in the wizard.
+8. In the **Create App Service** dialog, perform the following steps:
 
-    f. Open the **Create Cloud Service** **and Storage Account** dialog box.
+    a. Ensure that you have an auto-generated Web App name. If not, enter a globally unique name.
 
-    g. If you do not have any existing Web App, the **Create Web App** **and Storage Account** dialog box displays.
+    b. Select your Azure subscription.
 
-    h. If you have existing cloud services, locate the **Web App** list, and then select **Create New** to open the dialog box.
+    c. Click the **New** button immediately to the right of the **Resource Group** dialog box.
 
-8.  In the **Create Web App and Storage Account** dialog box, perform the following steps:
+    d. In the **Resource Group** dialog box, provide the value **TestSQL**.
 
-    a. In the **Name** box, type **cs20532\[*Your Name*\]**.
+    e. Click the **New** button immediately to the right of the **App Service Plan** dialog box.
 
-    b. In the **Region or Affinity Group** list, select the region that is closest to your location. **Ensure** that this region is same as the *\*region* where you created SQL Database.
+    f. Ensure that you have an auto-generated App Service Plan name. If not, provide the value **TestSQLPlan**.
 
-    c. Click **Create**.
+    g. In the **Location** list, select the region that is closest to your location. **Ensure** that this region is same as the *\*region* where you created SQL Database.
+
+    h. In the **Size** list, select the **Free** option.
+
+    i. Click the **OK** button to close the **Configure App Service Plan** dialog.
+
+    j. Click the **Create** button to create your App Service instance.
+
+    > **Note:** The deployment process for the new App Service is relatively short and should take 2-5 minutes.
 
 9.  In the **Microsoft Azure Publish Settings** dialog box, perform the following steps:
 
@@ -254,7 +276,7 @@
 
     > **Note:** The publish process is complete when the message “**Complete”** displays in the **Microsoft Azure Activity Log**’s history console. The green circular indicator in the Activity Log does not indicate that the publish process is complete, but it indicates that the package is uploaded successfully.
 
-2.  In the **Microsoft Azure Activity Log** console, click the hyperlink that directs you to the published web application.
+2.  In the **Microsoft App Service Activity** pane, click the hyperlink that directs you to the published web application.
 
 3.  Verify that the website displays the single event that you created in your Entity Framework context initializer.
 
@@ -262,27 +284,37 @@
 
 1.  On the Start screen, click the **Internet Explorer** tile.
 
-2.  Go to [*https://manage.windowsazure.com*](https://manage.windowsazure.com).
+2.  Go to [*https://portal.azure.com*](https://portal.azure.com).
 
-3.  In the email address box, type the email address of your Microsoft account, in the password box, type the password of your Microsoft account, and then click **Sign In**.
+3.  In the email address box, type the email address of your Microsoft account
+
+4. In the password box, type the password of your Microsoft account, and then click **Sign In**.
 
 #### Task 7: View the data in the Azure SQL Database
 
-1.  In the navigation pane on the left side, scroll down, and then click **SQL Databases**.
+1.  In the navigation pane on the left side, scroll down, and then click **Browse**.
 
-2.  At the top of the screen, click **Databases**. In the list of **SQL Databases**, click the **Name** of your SQL database with the prefix **db20532**.
+2.  In the **Browse** blade that displays, click **SQL databases**.
 
-3.  At the top of the screen, click **Dashboard**.
+2.  In the list of **SQL Databases**, select the SQL database named **db20532**.
 
-4.  Locate **quick glance** section and click on **Manage allowed IP Addresses**.
+3.  In the **db20532 - SQL database** blade, locate the **Essentials** panel.
 
-5.  Click on **Next** arrow on the right side of **Current Client IP Address**, to add your host machine IP address to be whitelisted.
+4.  Locate the **Server name** section and click on the associated hyperlink to navigate to the server blade.
 
-6.  Click on **Save** at the bottom of the page.
+5. In the **SQL server** blade, locate the **Essentials** panel.
+
+4.  Locate the **Firewall** section and click on the associated hyperlink to navigate to manage firewall settings.
+
+5. In the **Firewall settings** blade, click the **Add client IP** button to add your virtual machine's IP Address to the list of allowed IP Address ranges.
+
+6.  Click on **Save** at the top of the blade. Once saved, close the confirmation dialog by clicking the **Ok** button.
 
     > **Note:** It might take couple of minutes for the firewall changes to get updated on server.
 
-7.  Open **View** &gt; **Server Explorer** on Visual Studio.
+7. Return to the open instance of **Visual Studio**.
+
+7.  In Visual Studio, open the **View** menu and then select the **Server Explorer** option.
 
 8.  **Expand** the **Data Connections** node.
 
@@ -298,19 +330,17 @@
 
     c. In the **Username** box, type **testuser**.
 
-    d. In the **Password** box, type **TestPa\\$\\$w0rd**.
+    d. In the **Password** box, type **TestPa$$w0rd**.
 
-    e. In the **database name** dropdown, select **db20532\[your name\]**.
+    e. In the **Select or enter a atabase name** dropdown, select **db20532**.
 
-    > **Note**: If firewall rule is not updated on server, it might throw error. You will have to wait for couple of more minutes and then proceed.
+    > **Note**: If firewall rules are not updated on the server, you may have to wait a few more minutes before proceeding.
 
-12. On Visual Studio **Server Explorer**, expand **Data Connections** &gt; **sv20532\[your name\].db20532\[your name\].dbo** &gt; **Tables**.
+12. On Visual Studio **Server Explorer**, expand **Data Connections** then **sv20532\[your name\].db20532.dbo** and then the **Tables** node.
 
 13. Right click **Tables** and click **Refresh**.
 
-14. Expand **Tables**
-
-15. Right click **Events** table, and click **Show Table Data**.
+15. Right click **Events** table, and then select **Show Table Data**.
 
 16. In the **dbo.Events** table, view the single record.
 
