Fixed mis-rendering of student machine password

--- a/Instructions/dotnet/Mod09/20532B_LAB_09.md
+++ b/Instructions/dotnet/Mod09/20532B_LAB_09.md
@@ -40,7 +40,7 @@ Prior to starting this lab, you must have completed the lab in **Module 2**.
 
     > User name: **Student**
     >
-    > Password: **AzurePa\\$\\$w0rd**
+    > Password: **AzurePa$w0rd**
 
 5.  Verify that you received the credentials to sign in to the Azure portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
 
