--- a/Instructions/dotnet/Mod10/20532B_LAB_10.md
+++ b/Instructions/dotnet/Mod10/20532B_LAB_10.md
@@ -42,7 +42,7 @@ If necessary, sign in by using the following credentials:
 
 &gt;
 
-> Password: **AzurePa\\$\\$w0rd**
+> Password: **AzurePa$w0rd**
 
 Verify that you received the credentials to sign in to the Azure portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
 
