--- a/Instructions/dotnet/Mod06/20532B_LAB_06.md
+++ b/Instructions/dotnet/Mod06/20532B_LAB_06.md
@@ -10,15 +10,15 @@ Even though event registrations could be stored in SQL, you have a unique need. 
 
 After you complete this lab, you will be able to:
 
--   Use the Azure Store SDK to create a Table storage client.
+  -   Use the Azure Store SDK to create a Table storage client.
 
--   Use the Azure Store SDK to create a table.
+  -   Use the Azure Store SDK to create a table.
 
--   Use the Azure Store SDK to add entities to a table.
+  -   Use the Azure Store SDK to add entities to a table.
 
--   Use the Azure Store SDK to query entities.
+  -   Use the Azure Store SDK to query entities.
 
--   Use Server Explorer in Visual Studio 2015 to view Table storage entities.
+  -   Use Server Explorer in Visual Studio 2015 to view Table storage entities.
 
 ### Lab Setup
 
@@ -40,7 +40,7 @@ Before starting this lab, you must complete the lab in Module 2. For the lab in 
 
     -   User name: **Student**
 
-    -   Password: **AzurePa\\$\\$w0rd**
+    -   Password: **AzurePa$$w0rd**
 
 5.  Verify that you received the credentials to sign in to the Azure portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
 
@@ -50,17 +50,17 @@ Before starting this lab, you must complete the lab in Module 2. For the lab in 
 
 In this exercise, you will:
 
-> Query table entities by using a **CloudTableClient** instance.
+  - Query table entities by using a **CloudTableClient** instance.
 
-&gt; Use LINQ-to-Objects on a set of entities.
+  - Use LINQ-to-Objects on a set of entities.
 
 The main tasks for this exercise are as follows:
 
-1.  Create an instance of the CloudTable class.
+  1.  Create an instance of the CloudTable class.
 
-2.  Retrieve strongly-typed registration records by partition key.
+  2.  Retrieve strongly-typed registration records by partition key.
 
-3.  Use LINQ-to-Objects to project a list of registrant names.
+  3.  Use LINQ-to-Objects to project a list of registrant names.
 
 #### Task 1: Create an instance of the CloudTable class
 
@@ -112,13 +112,13 @@ Return the LINQ query as the result of the **GetRegistrantsNames** method.
 
 In this exercise, you will:
 
-> Update the existing Contoso.Events application to use Table storage.
+  - Update the existing Contoso.Events application to use Table storage.
 
 The main tasks for this exercise are as follows:
 
-1.  Update the register controller action to store the registration record.
+  1.  Update the register controller action to store the registration record.
 
-2.  Update the register ViewModel to retrieve the dynamic stub registration from the table.
+  2.  Update the register ViewModel to retrieve the dynamic stub registration from the table.
 
 #### Task 1: Update the register controller action to store the registration record
 
@@ -194,19 +194,19 @@ The main tasks for this exercise are as follows:
 
 In this exercise, you will:
 
-> Use the Azure Storage Emulator to test storage entities in development.
->
-> Use Visual Studio to debug an application that uses development storage.
+  - Use the Azure Storage Emulator to test storage entities in development.
+
+  - Use Visual Studio to debug an application that uses development storage.
 
 The main tasks for this exercise are as follows:
 
-1.  Run the data generation console project to populate the Azure storage table with data.
+  1.  Run the data generation console project to populate the Azure storage table with data.
 
-2.  Use Server Explorer in Visual Studio 2015 to view table storage registrations.
+  2.  Use Server Explorer in Visual Studio 2015 to view table storage registrations.
 
-3.  Debug the cloud web project to register for the event.
+  3.  Debug the cloud web project to register for the event.
 
-4.  Use Server Explorer in Visual Studio 2015 to view the new table storage registration.
+  4.  Use Server Explorer in Visual Studio 2015 to view the new table storage registration.
 
 #### Task 1: Run the data generation console project to populate the Azure storage table with data
 
