--- a/Instructions/dotnet/Mod06/20532B_LAB_06.md
+++ b/Instructions/dotnet/Mod06/20532B_LAB_06.md
@@ -1,4 +1,4 @@
-# Module 6: Storing Tabular Data in Azure
+# Module 6: Storing NoSQL Data in Azure
 
 # Lab: Storing Event Registration Data in Azure Storage Tables
 
@@ -68,26 +68,28 @@ The main tasks for this exercise are as follows:
 
 2.  File location: **Allfiles (F):\\Mod07\\Labfiles\\Starter\\Contoso.Events**
 
-In the **Contoso.Events.Worker** project, open the **TableStorageHelper.cs** file.
+1. In the **Contoso.Events.Worker** project, open the **TableStorageHelper.cs** file.
 
-From the **GetRegistrantNames** method, remove the existing code.
+1. From the **GetRegistrantNames** method, remove the existing code.
 
-Using the **\_tableClient** variable, create a new **CloudTable** instance by using the **GetTableReference** method with the following parameters:
+1. Using the **\_tableClient** variable, create a new **CloudTable** instance by using the **GetTableReference** method with the following parameters:
 
--   tableName: **EventRegistrations**
+  -   tableName: **EventRegistrations**
 
 #### Task 2: Retrieve strongly-typed registration records by partition key
 
 1.  By using the following code, create a **string** filter that finds entities with a partition key equivalent to the **eventKey** provided by the **GetRegistrantsNames** method’s parameters.
 
     ```
-      string partitionKey = eventKey;   string filter = TableQuery.GenerateFilterCondition("PartitionKey",  QueryComparisons.Equal, partitionKey);
+    string partitionKey = eventKey;   
+    string filter = TableQuery.GenerateFilterCondition("PartitionKey",  QueryComparisons.Equal, partitionKey);
     ```
 
 2.  Create a **TableQuery** with the filter and run the query by using the **ExecuteQuery** method of the *table* variable as shown in the following code:
 
     ```
-      TableQuery<Registration> query = new  TableQuery<Registration>().Where(filter);   IEnumerable<Registration> registrations =  table.ExecuteQuery<Registration>(query);
+    TableQuery<Registration> query = new  TableQuery<Registration>().Where(filter);   
+    IEnumerable<Registration> registrations =  table.ExecuteQuery<Registration>(query);
     ```
 
 #### Task 3: Use LINQ-to-Objects to project a list of registrant names
@@ -95,14 +97,21 @@ Using the **\_tableClient** variable, create a new **CloudTable** instance by us
 1.  Create a LINQ query that takes the registrations, orders them by **LastName**, then orders them by **FirstName**, and then projects them into a string of the format **“{LastName}, {FirstName}”** by using the following code:
 
     ```
-    IEnumerable<string> names = registrations .OrderBy(r => r.LastName) .ThenBy(r => r.FirstName) .Select(r => String.Format("{1}, {0}", r.FirstName, r.LastName));
+    IEnumerable<string> names = registrations
+      .OrderBy(r => r.LastName)
+      .ThenBy(r => r.FirstName)
+      .Select(r => String.Format("{1}, {0}", r.FirstName, r.LastName));
     ```
 
-> **Note:** You can alternatively use the query syntax for LINQ-to-Objects, as shown below:
+    > **Note:** You can alternatively use the query syntax for LINQ-to-Objects, as shown below:
+    >
+    > ```
+    IEnumerable names = from r in registrations
+                                orderby r.LastName, r.FirstName
+                                select r.FirstName + ", " + r.LastName
+      ```
 
-&gt; IEnumerable names = from r in registrations &gt; orderby r.LastName, r.FirstName &gt; select r.FirstName + ", " + r.LastName; 
-
-Return the LINQ query as the result of the **GetRegistrantsNames** method.
+1. Return the LINQ query as the result of the **GetRegistrantsNames** method.
 
 > **Results**: After completing this exercise, you will have queried entities by row key or partition key from Table storage.
 
@@ -129,25 +138,29 @@ The main tasks for this exercise are as follows:
 3.  Create a **CloudStorageAccount** variable by using the **Microsoft.WindowsAzure.Storage.ConnectionString** stored in the Cloud configuration files as shown in the following code:
 
     ```
-      string connectionString =  CloudConfigurationManager.GetSetting ("Microsoft.WindowsAzure.Storage.ConnectionString");   var storageAccount = CloudStorageAccount.Parse(connectionString);
+    string connectionString = ConfigurationManager.AppSettings["StorageConnectionString"];   
+    var storageAccount = CloudStorageAccount.Parse(connectionString);
     ```
 
 4.  Create a *CloudTable* variable by using the storage account and a Storage table named **EventRegistrations** as shown in the following code:
 
     ```
-      var tableClient = storageAccount.CreateCloudTableClient();   var table = tableClient.GetTableReference("EventRegistrations");
+    var tableClient = storageAccount.CreateCloudTableClient();   
+    var table = tableClient.GetTableReference("EventRegistrations");
     ```
 
 5.  Create and run a **TableOperation** to insert the dynamic registration object into the Storage table by using the following code:
 
     ```
-    var operation = TableOperation.Insert(registration); table.Execute(operation);
+    var operation = TableOperation.Insert(registration); 
+    table.Execute(operation);
     ```
 
 6.  Parse the **RowKey** of the registration as a **System.Guid** and return the value as the result of the **StoreRegistration** method by using the following code:
 
     ```
-    Guid rowKey = Guid.Parse(registration.RowKey); return rowKey;
+    Guid rowKey = Guid.Parse(registration.RowKey); 
+    return rowKey;
     ```
 
 #### Task 2: Update the register ViewModel to retrieve the dynamic stub registration from the table
@@ -159,31 +172,36 @@ The main tasks for this exercise are as follows:
 3.  Create a *CloudStorageAccount* variable by using the **Microsoft.WindowsAzure.Storage.ConnectionString** stored in the Cloud configuration files as shown in the following code:
 
     ```
-    string connectionString =CloudConfigurationManager.GetSetting("Microsoft.WindowsAzure.Storage.ConnectionString"); var storageAccount = CloudStorageAccount.Parse(connectionString);
+    string connectionString = ConfigurationManager.AppSettings["StorageConnectionString"];
+    var storageAccount = CloudStorageAccount.Parse(connectionString);
     ```
 
 4.  Create a *CloudTable* variable by using the storage account, and a Storage table named **EventRegistrations** as shown in the following code:
 
     ```
-    var tableClient = storageAccount.CreateCloudTableClient(); var table = tableClient.GetTableReference("EventRegistrations");
+    var tableClient = storageAccount.CreateCloudTableClient(); 
+    var table = tableClient.GetTableReference("EventRegistrations");
     ```
 
 5.  Create a **string** filter that finds entities with a **PartitionKey** equivalent to the **eventKey** provided by the **GetRegistrantsNames** method’s parameters as shown in the following code:
 
     ```
-    string partitionKey = String.Format("Stub_{0}", eventKey); string filter = TableQuery.GenerateFilterCondition("PartitionKey",QueryComparisons.Equal, partitionKey);
+    string partitionKey = String.Format("Stub_{0}", eventKey); 
+    string filter = TableQuery.GenerateFilterCondition("PartitionKey",QueryComparisons.Equal, partitionKey);
     ```
 
 6.  Create a **TableQuery** with the filter and run the query by using the **ExecuteQuery** method of the *table* variable, as shown in the following code:
 
     ```
-    TableQuery query = new TableQuery().Where(filter); IEnumerable<DynamicTableEntity> tableEntities =table.ExecuteQuery(query);
+    TableQuery query = new TableQuery().Where(filter); 
+    IEnumerable<DynamicTableEntity> tableEntities = table.ExecuteQuery(query);
     ```
 
 7.  Because the query returns only a single entity, use the **SingleOrDefault** extension method to get the *DynamicTableEntity* variable, and then pass that variable into the **DynamicEntity.GenerateDynamicItem** static method. Set the **RegisterViewModel**’s **RegistrationStub** property to the result of the method call by using the following code:
 
     ```
-    DynamicTableEntity tableEntity = tableEntities.SingleOrDefault(); this.RegistrationStub = DynamicEntity.GenerateDynamicItem(tableEntity);
+    DynamicTableEntity tableEntity = tableEntities.SingleOrDefault(); 
+    this.RegistrationStub = DynamicEntity.GenerateDynamicItem(tableEntity);
     ```
 
 > **Results**: After completing this exercise, you will have used the Azure Storage SDK to retrieve and create entities.
@@ -194,11 +212,13 @@ The main tasks for this exercise are as follows:
 
 In this exercise, you will:
 
-  - Use the Azure Storage Emulator to test storage entities in development.
+  - Use an Azure Storage account to test storage entities in development.
 
   - Use Visual Studio to debug an application that uses development storage.
 
 The main tasks for this exercise are as follows:
+
+  1. Create a storage account instance.
 
   1.  Run the data generation console project to populate the Azure storage table with data.
 
@@ -208,33 +228,63 @@ The main tasks for this exercise are as follows:
 
   4.  Use Server Explorer in Visual Studio 2015 to view the new table storage registration.
 
-#### Task 1: Run the data generation console project to populate the Azure storage table with data
+#### Task 1: Create a Storage Account Instance
+
+1. Sign in to the Azure Portal (https://portal.azure.com).
+
+2. Create a Storage Account using the following details:
+
+  - Name: **provide a globally unique value**
+
+  - Replication: **Locally Redundant Storage (LRS)**
+
+  - Resource Group: **20532**
+
+  - Location: **Select the region that is closest to your location**
+
+3. Record the *connection string* of the newly created Storage Account instance.
+
+#### Task 2: Run the data generation console project to populate the Azure storage table with data
 
 1.  Locate the **Contoso.Events.Data.Generation** project.
 
+1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the **StorageConnectionString** *AppSetting*.
+
 2.  Debug the **Contoso.Events.Data.Generation** project.
 
-#### Task 2: Use Server Explorer in Visual Studio 2015 to view table storage registrations
+#### Task 3: Use Server Explorer in Visual Studio 2015 to view table storage registrations
 
-1.  In the **Server Explorer** pane, open the **Azure** node.
+1.  In the **Cloud Explorer** pane, open the **Storage Accounts** node.
 
-2.  In the **Development** Azure Storage Account, open the **EventRegistrations** table.
+2.  In the node associated with your Storage Account, open the **EventRegistrations** table.
 
 3.  Explore the table entities that are auto generated by the console project.
 
-#### Task 3: Debug the cloud web project to register for the event
+#### Task 4: Debug the web and worker projects to register for the event
 
-1.  Debug the **Contoso.Events.Cloud** cloud project.
+1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the **StorageConnectionString** *AppSetting*.
+
+1. Start the **Contoso.Events.Worker** project without debugging.
+
+1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the following locations:
+
+    - **StorageConnectionString** *AppSetting*
+
+    - **AzureWebJobsStorage** *ConnectionString*
+
+    - **AzureWebJobsDashboard** *ConnectionString*
+
+1. Debug the **Contoso.Events.Web** project.
 
 2.  Register for an event by using the website.
 
-#### Task 4: Use Server Explorer in Visual Studio 2015 to view the new table storage registration
+#### Task 5: Use Server Explorer in Visual Studio 2015 to view the new table storage registration
 
 1.  Switch to the **Contoso.Events – Microsoft Visual Studio** window
 
-2.  Open the **Azure** node of the **Server Explorer** pane.
+2.  Open the **Cloud Explorer** pane.
 
-3.  Open the **EventRegistrations** table in the **Development** Azure Storage Account.
+3.  Open the **EventRegistrations** table in the Azure Storage Account.
 
 4.  Locate your recently created **Registration** entity.
 
