--- a/Instructions/dotnet/Mod07/20532B_LAB_07.md
+++ b/Instructions/dotnet/Mod07/20532B_LAB_07.md
@@ -48,23 +48,19 @@ Before starting this lab, you must complete the lab in Module 2. For the lab in 
 
 In this exercise, you will:
 
-Create a blob container by using the Management Portal.
+  - Create a blob container by using the Management Portal.
 
-Add blob files to the container.
+  - Add blob files to the container.
 
-Access the blob files in the container.
+  - Access the blob files in the container.
 
 The main tasks for this exercise are as follows:
 
-1.  Sign in to the Azure Portal.
+  1.  Sign in to the Azure Portal.
 
-<!-- -->
+  1.  Create a container by using the Management Portal.
 
-1.  Create a container by using the Management Portal.
-
-<!-- -->
-
-1.  Add and access blob files in your container.
+  1.  Add and access blob files in your container.
 
 #### Task 1: Sign in to the Azure Portal
 
