--- a/Instructions/dotnet/Mod09/20532B_LAB_AK_09.md
+++ b/Instructions/dotnet/Mod09/20532B_LAB_AK_09.md
@@ -1,88 +1,124 @@
 # Module 9: Automating Integration with Azure Resources
 
-# Lab: Automating the Creation of a Test Environment using PowerShell
+# Lab: Automating the Creation of Azure Assets using PowerShell and the xPlat CLI
 
-## Exercise 1: Preparing the Azure PowerShell Environment
+## Exercise 1: Use xPlat CLI to Create and Manage and Azure Web App
 
-#### Task 1: Open the Azure PowerShell Console
+#### Task 1: Preparing the xPlat CLI Environment
 
-1.  On the Start screen, click the down arrow to view all the applications, and then click **Microsoft Azure PowerShell**.
+1.  Open the **Microsoft Web Platform Installer** application.
 
-2.  Switch to the **Microsoft Azure PowerShell** window.
+1.  In the **Web Platform Installer** dialog, click the **Products** tab.
 
-#### Task 2: Import your Azure subscription by using a Publish Settings file
+1.  Locate the **Microsoft Azure Cross-platform Command Line Tools** option.
 
-1.  To get your publish settings file, type the following command in the console, and then press **Enter**:
+1.  Click the **Add** button to the right of **Microsoft Azure Cross-platform Command Line Tools** option.
 
-    ```
-          Get-AzurePublishSettingsFile
-    ```
+1.  Click the **Install** button.
 
-2.  In the **Internet Explorer** tab that opens, perform the following steps:
+1.  You will be prompted with a list of pre-requisite applications. Click the **I Accept** button.
 
-3.  Enter the email address of your Microsoft account.
+1.  Wait for the installation process to complete.
 
-4.  Click Continue.
+1.  On the Start screen, click the down arrow to view all the applications, and then click **Command Prompt**.
 
-5.  Enter the password for your Microsoft account.
+2.  Switch to the **Command Prompt** window.
 
-6.  Click **Sign In**.
-
-    > At the bottom of the Internet Explorer window, click the arrow that is on the right side of the **Save** button, and then click **Save As** in the download dialog box.
-
-7.  In the **Save As** dialog box that displays, perform the following steps:
-
-    a. Go to the AllFiles (F):\\Mod11\\Labfiles folder.
-
-    b. In the **File Name** box, type **20532**.
-
-    c. In the **Save as type** box, ensure that the **PUBLISHSETTINGS File** option is selected.
-
-    d. Click **Save**.
-
-    e. Close Internet Explorer.
-
-    f. Switch to the **Microsoft Azure PowerShell** application.
-
-8.  To import your publish settings file, type the following command in the console, and then press Enter:
+3.  To validate that the **azure** CLI command is avaialble, type the following command in the console, and then press Enter:
 
     ```
-     Import-AzurePublishSettingsFile F:\\Mod11\\Labfiles\\20532.publishsettings
+    azure --help
     ```
+
+2.  Type **Y** to indicate that you approve of the data collection process.
+
+4.  To switch to the **ARM** mode for the CLI, type the following command in the console, and then press Enter:
+
+    ```
+    azure config mode arm
+    ```
+
+#### Task 2: Login to Your Azure Subscription Using Interactive Login
+
+8.  To begin the interactive login process, type the following command in the console, and then press Enter:
+
+    ```
+    azure login
+    ```
+
+1.  Take a note of the code provided by the CLI command tool:
+
+    > **Note:** The code is displayed in the command prompt. For example, you may see: ``Enter the code A2U763CQ9 to authenticate``. In this example, the code is ``A2U763CQ9``.
+
+1.  On the Start screen, click the **Internet Explorer** tile.
+
+2.  Go to *(https://aka.ms/devicelogin)*.
+
+3.  In the code dialog box, type in the code you recorded earlier.
+
+4.  If the code is correct, the page will refresh automatically and render the name of the application requesting access to your Azure subscription (**Microsoft Azure CLI**).
+
+5.  Click the **Continue** button.
+
+3.  In the email address dialog box, type the email address of your Microsoft account.
+
+4.  In the password dialog box, type the password for your Microsoft account.
+
+5.  Click **Sign In**.
+
+    > **Note**: If you were successful, you will see the message *"You have signed in to the Microsoft Azure Cross-platform Command Line Interface application on your device"*. The code has a timeout so it is possible to not login quickly enough using the Device Login page. If this happens, simply repeat this task.
+
+6.  Return to the **Command Prompt** application.
 
 9.  To view your account details, type the following command in the console, and then press Enter:
 
     ```
-      Get-AzureAccount
+    azure account show
     ```
 
-> **Note:** If you have multiple Azure subscriptions, you can use **Select-AzureSubscription** to select the appropriate subscription. If your Azure subscription is provided by a Learning Partner, it might be an auto-generated account without any details. In such a case, this command will return an empty result.
->
-> **Results**: After completing this exercise, you will have set up a development environment to use Windows PowerShell for Azure service automation.
+    > **Note:** If you have multiple Azure subscriptions, you can use **Select-AzureSubscription** to select the appropriate subscription. If you are unsure about your subscription's name, you can simply use **azure account list**. If your Azure subscription is provided by a Learning Partner, it might be an auto-generated account without any details. In such a case, this command will return an empty result.
 
-## Exercise 2: Using Windows PowerShell to create and access a Website instance
+> **Results**: After completing this exercise, you will have set up a development environment to use xPlat CLI for Azure service automation.
 
-#### Task 1: Create a new Website instance by using Windows PowerShell
+#### Task 3: Create a new Website instance by using xPlat CLI
 
-1.  To create a new Website, type the following command in the console by providing the unique name selected for your Website, and then press Enter:
-
-```
-        New-AzureWebsite [Unique Name] >  **Note:** You might get an error message notifying you that your Website’s name is not unique. If this occurs, select a new name until your Website is created.
-```
-
-1.  To view a list of your Websites, type the following command in the console, and then press Enter:
+1.  To create a new Resource Group, type the following command in the console by providing the name **rga20532**, the **West US** location and then press Enter:
 
     ```
-         Get-AzureWebsite
+    azure group create --name rga20532 --location "West US"
+    ```
+
+    > **Note:** You might get an error message notifying you that your Website’s name is not unique. If this occurs, select a new name until your Website is created.
+
+1.  To view a list of your Resource Groups, type the following command in the console, and then press Enter:
+
+    ```
+    azure group list
+    ```
+
+1.  To create a new Web App Resource, type the following command in the console by providing the unique name selected for your Web App, the **East US** location and then press Enter:
+
+    ```
+    azure resource create --name [Unique Name] --resource-type "Microsoft.Web/Sites" --api-version "2014-06-01" --location "East US" --resource-group rga20532
+    ```
+
+    > **Note:** You might get an error message notifying you that your Website’s name is not unique. If this occurs, select a new name until your Website is created.
+
+1.  To view a list of Resources in the **rga20532** Resource Group, type the following command in the console, and then press Enter:
+
+    ```
+    azure resource list --resource-group rga20532
     ```
 
 2.  To get the details for your new Website, type the following command in the console by providing the unique name selected for your Website, and then press Enter:
 
     ```
-         Get-AzureWebsite –Name [Unique Name]
+    azure resource show --name [Unique Name] --resource-type "Microsoft.Web/Sites" --resource-group rga20532 --api-version "2014-06-01" --json
     ```
 
-3.  Record the **hostname** value from the list of key-value pairs that are generated by the previous command.
+3.  Record the **defaultHostName** value from the list of key-value pairs that are generated by the previous command.
+
+    > **Note:** this hostname property will look similar to this: ``"defaultHostName": "websitepiaxfa4veu6lw.azurewebsites.net"``.
 
 4.  To view the new Website in Internet Explorer, type the following command in the console, and then press Enter:
 
@@ -94,39 +130,43 @@
 
 6.  Close Internet Explorer.
 
-7.  Switch to the **Microsoft Azure PowerShell** console window.
+7.  Switch to the **Command Prompt** console window.
 
-#### Task 2: Remove a Website instance by using Windows PowerShell
+#### Task 4: Remove a Website instance by using xPlat CLI
 
-1.  To stop your new Website, type the following command in the console by providing the unique name selected for your Website, and then press Enter:
-
-    Stop-AzureWebsite –Name \[Unique Name\]
-
-2.  To view the list of your Websites, type the following command in the console, and then press Enter:
+3.  To remove your new Web App, type the following command in the console by providing the unique name selected for your Website, and then press Enter:
 
     ```
-    Get-AzureWebsite
+    azure resource show --name [Unique Name] --resource-type "Microsoft.Web/Sites" --resource-group rga20532 --api-version "2014-06-01" --json
     ```
 
-3.  To remove your new Website, type the following command in the console by providing the unique name selected for your Website, and then press Enter:
+4.  Type **Y** to indicate that you want to remove the Web App, and then press Enter.
+
+3.  To remove your new Resource Group, type the following command in the console by providing the name **rga20532**, and then press Enter:
 
     ```
-    Remove-AzureWebsite –Name [Unique Name]
+    azure group delete --name rga20532  
     ```
 
-4.  Type **Y** to indicate that you want to remove the Website, and then press Enter.
+4.  Type **Y** to indicate that you want to remove the Resource Group, and then press Enter.
 
-5.  To verify that your Website is removed, type the following command in the console by providing the unique name selected for your Website, and then press Enter. The result should be empty:
+5.  To verify that your Resource Group has been removed, type the following command in the console by providing the name **rga20532**, and then press Enter. The result should be a failure:
 
+    ```  
+    azure group show --name rga20532
     ```
-    Get-AzureWebsite –Name [Unique Name]
-    ```
 
-> **Results**: After completing this exercise, you will have used Windows PowerShell to manage instances of an Azure service.
+> **Results**: After completing this exercise, you will have used xPlat CLI to manage instances of an Azure service.
 
-## Exercise 3: Using a resource template to create multiple preconfigured resources
+## Exercise 2: Use PowerShell to Create and Manage a Resource Group
 
-#### Task 1: Switch to the Azure Resource Manager PowerShell Modules
+#### Task 1: Open the Azure PowerShell Console
+
+1.  On the Start screen, click the down arrow to view all the applications, and then click **Microsoft Azure PowerShell**.
+
+2.  Switch to the **Microsoft Azure PowerShell** window.
+
+#### Task 2: Authenticate to Azure Resource Manager Using PowerShell
 
 1.  To switch modules, type the following command in the console, and then press Enter:
 
@@ -148,92 +188,48 @@
     Get-AzureRmContext
     ```
 
-> **Note:** If you have multiple Azure subscriptions, you can use **Select-AzureSubscription** to select the appropriate subscription.
+> **Note:** If you have multiple Azure subscriptions, you can use **Select-AzureRmSubscription** to select the appropriate subscription.
 
-#### Task 2: Create a resource group by using Windows PowerShell
+#### Task 3: Create a resource group by using PowerShell
 
 1.  To create a new instance of a resource group from the template, type the following command in the console, and then press Enter:
 
     ```
-    New-AzureRmResourceGroup -Name rga20532 -Location "West US"
+    New-AzureRmResourceGroup -Name rgb20532 -Location "West US"
     ```
-
-<!-- -->
 
 1.  To provide the parameters for the template, type the following command in the console, perform the following steps:
 
     ```
-    New-AzureRmResourceGroupDeployment -ResourceGroupName rga20532 -TemplateUri https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/201-web-app-sql-database/azuredeploy.json
+    New-AzureRmResourceGroupDeployment -ResourceGroupName rgb20532 -TemplateFile "F:\Mod09\Labfiles\azuredeploy.json"
     ```
 
-    a. For the **siteName**
+    f. For the **administratorLogin** prompt, provide the value **testuser**, and then press Enter.
 
-    ```
-    prompt, provide the value **rs20532[*Your Name Here*]**, and pressEnter.
-    ```
-
-    b. For the **hostingPlanName**
-
-    ```
-    prompt, provide the value **rp20532[*Your Name Here*]**, and then pressEnter.
-    ```
-
-    c. For the **siteLocation**
-
-    ```
-    prompt, provide the value **West US**, and then press Enter.
-    ```
-
-    d. For the **serverName** prompt,
-
-    ```
-    provide the value **rv20532[*Your Name Here*]**, and then press Enter.
-    ```
-
-    e. For the **serverLocation**
-
-    ```
-    prompt, provide the value **West US**, and then press Enter.
-    ```
-
-    f. For the **administratorLogin**
-
-    ```
-    prompt, provide the value **testuser,** and then press Enter.
-    ```
-
-    g. For the
-
-    ```
-    **administratorLoginPassword** prompt, provide the value**TestPa\$\$w0rd**, and press Enter.
-    ```
-
-    h. For the **databaseName**
-
-    ```
-    prompt, provide the value **rd20532[*Your Name Here*]**, and pressEnter.
-    ```
+    g. For the **administratorLoginPassword** prompt, provide the value **TestPa$$w0rd**, and press Enter.
 
     > **Note:** Wait for the provisioning process to complete. Status messages will be displayed periodically and the final message with the details will be displayed when provisioning is complete.
 
 2.  To get the details of your new resource group, type the following command in the console by providing the unique name selected for your Website, and then press Enter:
 
     ```
-    Get-AzureRmResourceGroup –ResourceGroupName rga20532
+    Get-AzureRmResourceGroup –ResourceGroupName rgb20532
     ```
 
 3.  To get the details of your new Website, type the following command in the console by providing the unique name selected for your Website, and then press Enter:
 
     ```
-    (Get-AzureRmResource -Name rs20532[Your Name Here] -ResourceGroupName rga20532 -ResourceType "Microsoft.Web/sites" -ApiVersion 2015-08-01).Properties
+    (Get-AzureRmResource -IsCollection -ResourceGroupName rgb20532 -ResourceType "Microsoft.Web/sites" -ApiVersion 2015-08-01).Properties
     ```
 
-4.  Record the single value in the **HostNames** array from the JSON data generated by the previous command.
+4.  Record the value of the **hostNames** property from the JSON data generated by the previous command.
+
+    > **Note:** this hostname property will look similar to this: ``DefaultHostName : websitepiaxfa4veu6lw.azurewebsites.net``.
 
 5.  To view the new Website in Internet Explorer, type the following command in the console, and then press Enter:
 
     ```
-        explorer “http://[Host Name]”
+    explorer “http://[Host Name]”
     ```
 
 6.  Verify that the new Website is running.
@@ -242,12 +238,12 @@
 
 8.  Switch to the **Microsoft Azure PowerShell** console window.
 
-#### Task 3: Remove the resource group by using Windows PowerShell
+#### Task 4: Remove the resource group by using PowerShell
 
 1.  To remove your new resource group, type the following command in the console, and then press Enter:
 
     ```
-    Remove-AzureRmResourceGroup –Name rga20532
+    Remove-AzureRmResourceGroup –Name rgb20532
     ```
 
 2.  Type **Y** to indicate that you want to remove the Website, and then press Enter.
