--- a/Instructions/dotnet/Mod01/20532B_LAB_01.md
+++ b/Instructions/dotnet/Mod01/20532B_LAB_01.md
@@ -4,7 +4,7 @@
 
 ### Scenario
 
-You have been designated by your team as the individual who will explore the Azure portal and then train the other team members on how to use the portal. You decided to customize a few features of the portal and create a new service instance.
+You are designated by your team as the individual who will explore the Azure Portal and then train the other team members on how to use the portal. You decided to customize a few features of the portal and create a new service instance.
 
 ### Objectives
 
