--- a/Instructions/dotnet/Mod08/20532B_LAB_08.md
+++ b/Instructions/dotnet/Mod08/20532B_LAB_08.md
@@ -2,8 +2,7 @@
 
 # Lab: Using Queues and Service Bus to Manage Communication Between Web Applications in Azure
 
-###
-Scenario
+### Scenario
 
 Now that you can generate sign-in sheets in worker roles, you need a
 scalable and consistent way to enqueue messages for the worker role. You
