--- a/Instructions/dotnet/Mod09/20532B_LAB_09.md
+++ b/Instructions/dotnet/Mod09/20532B_LAB_09.md
@@ -2,6 +2,10 @@
 
 # Lab: Automating the Creation of Azure Assets using PowerShell and the xPlat CLI
 
+### Scenario
+
+Now that you have created many of the resources that you will use in your Azure application, you have decided to automate the creation of your assets in Azure. Some of your administrators are Windows experts and would prefer to automate using PowerShell while others use Linux and would prefer to automate from the command line. Due to this requirement, you will try and implement automation using PowerShell and separately using a cross-platform CLI interface.
+
 ### Objectives
 
 After you complete this lab, you will be able to:
